--- a/static/css/main.less
+++ b/static/css/main.less
@@ -52,6 +52,14 @@ body {
         color: @c-white;
         font-weight: bold;
         cursor: pointer;
+        img {
+            width: 25px;
+            height: 25px;
+            margin: -5px;
+        }
+        .image {
+            margin: 0 5px;
+        }
     }
     .nav {
         padding: 10px 20px;
