Rankings template, more fixes

--- a/static/template/home.html
+++ b/static/template/home.html
@@ -1,3 +1,15 @@
+{{ if .loggedIn }}
+<script>
+            $(".header .login").hide();
+            $(".header .logout").show();
+
+    </script>
+{{else}}
+<script>
+            $(".header .login").show();
+            $(".header .logout").hide();
+    </script>
+{{ end }}
 <div>
     Welcome to blablabla
     
