--- a/static/template/rankings.html
+++ b/static/template/rankings.html
@@ -1,3 +1,16 @@
+{{ if .loggedIn }}
+<script>
+            $(".header .login").hide();
+            $(".header .logout").show();
+
+    </script>
+{{else}}
+<script>
+            $(".header .login").show();
+            $(".header .logout").hide();
+    </script>
+{{ end }}
+
 <div id="headline">Rankings</div>
 <p> Lorem ipsum... </p>
 <div class="rankings-wrapper">
@@ -5,7 +18,7 @@
         <div class="title head">Today</div>
         <div class="name head cell">Username</div>
         <div class="value head cell">Win %</div>
-        {{range $rec := today}}
+        {{range $rec := .today}}
             <div class="trow">
                 <div class="name cell">
                     <a href="{{ $rec.User.Repo }}">{{ $rec.User.Name }}</a>
@@ -18,7 +31,7 @@
         <div class="title head">This month</div>
         <div class="name head cell">Username</div>
         <div class="value head cell">Win %</div>
-        {{range $rec := month}}
+        {{range $rec := .month}}
             <div class="trow">
                 <div class="name cell">
                     <a href="{{ $rec.User.Repo }}">{{ $rec.User.Name }}</a>
@@ -33,7 +46,7 @@
             <div class="name head cell">Username</div>
             <div class="value head cell">Win %</div>
         </div>
-        {{range $rec := allTime}}
+        {{range $rec := .allTime}}
             <div class="trow">
                 <div class="name cell">
                     <a href="{{ $rec.User.Repo }}">{{ $rec.User.Name }}</a>
