--- a/static/css/main.css
+++ b/static/css/main.css
@@ -65,8 +65,9 @@ body a {
   font-size: 20px;
 }
 #content .editor-wrapper {
-  margin-top: 10px;
-  height: 600px;
+  margin: 10px 0;
+  height: 500px;
+  position: relative;
 }
 #content .editor-wrapper #editor {
   width: 100%;
@@ -79,6 +80,33 @@ body a {
   width: 40%;
   height: 100%;
   float: right;
+}
+#content .editor-wrapper .submitCode {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  -webkit-border-radius: 5;
+  -moz-border-radius: 5;
+  border-radius: 5px;
+  color: #ffcc66;
+  background: #272727;
+  border: 1px solid #272727;
+  padding: 5px 10px;
+  z-index: 101;
+}
+#content .editor-wrapper .submitCode:hover {
+  cursor: pointer;
+  border: 1px solid #ffcc66;
+}
+#content .editor-wrapper .validation {
+  position: absolute;
+  bottom: -5px;
+  left: 50px;
+  right: -5px;
+  background: #272727;
+  opacity: 0.9;
+  z-index: 100;
+  padding: 10px 200px 10px 10px;
 }
 #content .rankings-wrapper {
   margin-top: 10px;
