--- a/static/css/main.less
+++ b/static/css/main.less
@@ -79,8 +79,9 @@ body {
         font-size: @f-heading;
     }
     .editor-wrapper {
-        margin-top: 10px;
-        height : 600px;
+        margin: 10px 0;
+        height : 500px;
+        position: relative;
         #editor {
             width: 100%;
             height: 100%;
@@ -93,6 +94,34 @@ body {
             height: 100%;
             float: right;
         }
+        .submitCode {
+            position: absolute;
+            bottom: 10px;
+            right: 10px;
+            -webkit-border-radius: 5;
+            -moz-border-radius: 5;
+            border-radius: 5px;
+            color: @c-yellow;
+            background: @c-black;
+            border: 1px solid @c-black;
+            padding: 5px 10px;
+            z-index: 101;
+            &:hover{
+                cursor: pointer;
+                border: 1px solid @c-yellow;
+            }
+        }
+        .validation {
+            position: absolute;
+            bottom: -5px;
+            left: 50px;
+            right: -5px;
+            background: @c-black;
+            opacity: 0.9;
+            z-index: 100;
+            padding: 10px 200px 10px 10px;
+        }
+        
     }
     .rankings-wrapper {
         margin-top: 10px;
