--- a/static/css/main.css
+++ b/static/css/main.css
@@ -13,7 +13,7 @@ body a {
   width: inherit;
 }
 .outer-wrapper .inner-wrapper {
-  width: 960px;
+  width: 1280px;
   margin: auto;
   left: 0;
   right: 0;
@@ -69,72 +69,65 @@ body a {
   height: 500px;
   position: relative;
 }
-#content .editor-wrapper #editor {
-  width: 100%;
+#content .editor-wrapper .editor {
+  position: absolute;
+  width: 620px;
   height: 100%;
-  float: left;
   border: 1px solid #464444;
 }
-#content .editor-wrapper #apidoc {
-  display: none;
-  width: 40%;
-  height: 100%;
-  float: right;
+#content .editor-wrapper .editor#editor1 {
+  left: 0;
+}
+#content .editor-wrapper .editor#editor2 {
+  right: 0;
+}
+#content .editor-wrapper .vs {
+  position: absolute;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 50px;
+  height: 50px;
+  font-size: 50px;
+  z-index: 102;
 }
 #content .editor-wrapper .submitCode {
   position: absolute;
-  bottom: 10px;
-  right: 10px;
+  bottom: -70px;
+  right: 0;
+  left: 0;
+  width: 200px;
+  font-size: 26px;
+  margin: auto;
   -webkit-border-radius: 5;
   -moz-border-radius: 5;
   border-radius: 5px;
   color: #ffcc66;
   background: #272727;
-  border: 1px solid #272727;
+  border: 1px solid #464444;
   padding: 5px 10px;
   z-index: 101;
+  text-align: center;
 }
 #content .editor-wrapper .submitCode:hover {
   cursor: pointer;
   border: 1px solid #ffcc66;
 }
 #content .editor-wrapper .validation {
+  width: 580px;
   position: absolute;
-  bottom: -5px;
-  left: 50px;
-  right: -5px;
+  bottom: 0;
   background: #272727;
   opacity: 0.9;
   z-index: 100;
-  padding: 10px 200px 10px 10px;
-}
-#content .rankings-wrapper {
-  margin-top: 10px;
-}
-#content .rankings-wrapper .column {
-  display: table-column;
-  width: 300px;
-  display: inline-block;
-  margin-right: 10px;
-}
-#content .rankings-wrapper .column .title {
-  margin: 10px 5px;
-}
-#content .rankings-wrapper .column .cell {
-  display: table-cell;
+  padding: 10px 20px;
   border: 1px solid #464444;
-  padding: 2px 5px;
 }
-#content .rankings-wrapper .column .thead {
-  display: table-header-group;
+#content .editor-wrapper .validation#validation1 {
+  left: 0;
 }
-#content .rankings-wrapper .column .head {
-  font-weight: bold;
-}
-#content .rankings-wrapper .column .name {
-  width: 230px;
-}
-#content .rankings-wrapper .column .value {
-  width: 70px;
-  display: ta;
+#content .editor-wrapper .validation#validation2 {
+  right: 0;
 }
