--- a/static/css/main.less
+++ b/static/css/main.less
@@ -18,6 +18,7 @@ body {
     a {
         color: @c-yellow;
         text-decoration: none;
+        cursor: pointer;
     }
 }
 
@@ -145,6 +146,7 @@ body {
             &#validation2 {
                 right: 0;
             }
+            transition: all 0.5s ease;
         }
         .results {
             position: absolute;
@@ -161,6 +163,7 @@ body {
             border: 1px solid @c-lgray;
             background: @c-black;
             z-index: 110;
+            transition: all 0.5s ease;
             .results-title {
                 margin: 10px;
                 font-size: 32px;
