Refactoring, added footer

--- a/static/css/main.less
+++ b/static/css/main.less
@@ -32,6 +32,16 @@ body {
     }
 }
 
+.footer {
+    position: absolute;
+    text-align: center;
+    bottom:0px;
+    left: 0;
+    right: 0;
+    margin: auto;
+    opacity: 0.6;
+}
+
 .header {
     margin-top: 15px;
     border-bottom: 1px solid @c-lgray;
