--- a/static/template/frame.html
+++ b/static/template/frame.html
@@ -11,6 +11,9 @@
             <div id="content">
                  
             </div>
+            <div class="footer">
+                <p>Made in a hurry for <a href="http://gophergala.com">Gopher Gala</a>. By <a href="https://twitter.com/tncardoso">@tncardoso</a> and <a href="https://twitter.com/demetreh">@demetreh</a></p>
+            </div>
         </div>
     </div>
 <script type="application/javascript" src="js/frame.js" defer></script>
