--- a/static/template/perf.html
+++ b/static/template/perf.html
@@ -1,5 +1,5 @@
-<div id="headline" class="title">A place for all your Gopher kombating needs</div>
-<p class="message">It's very simple - code (or paste, whatever) two #Golang snippets 
+<div id="headline" class="title">A place for all your Go code kombating needs</div>
+<p class="message">It's very simple - code (or paste, whatever) two Go snippets 
     and compare their performance head to head.</p>
 
 {{ if .loggedIn }}
