--- a/static/css/main.css
+++ b/static/css/main.css
@@ -19,6 +19,15 @@ body a {
   left: 0;
   right: 0;
 }
+.footer {
+  position: absolute;
+  text-align: center;
+  bottom: 0px;
+  left: 0;
+  right: 0;
+  margin: auto;
+  opacity: 0.6;
+}
 .header {
   margin-top: 15px;
   border-bottom: 1px solid #464444;
