--- a/static/css/main.less
+++ b/static/css/main.less
@@ -15,7 +15,7 @@ body {
     color: @c-white;
     font-family: Verdana, Arial, serif;
     background-color: @c-black;
-    a {
+    a, .login {
         color: @c-yellow;
         text-decoration: none;
         cursor: pointer;
