--- a/static/css/main.less
+++ b/static/css/main.less
@@ -55,6 +55,9 @@ body {
         color: @c-yellow;
         cursor: pointer;
     }
+    .login {
+        color: @c-white;
+    }
     .logo:hover {}
     .profile {
         padding: 10px 20px;
